--- a/vercel.json
+++ b/vercel.json
@@ -3,9 +3,10 @@
   "builds": [
     {
       "src": "app.py",
-      "use": "@vercel/python",
+      "use": "@vercel/python@3.1.30",
       "config": {
         "runtime": "python3.10",
+        "pythonVersion": "3.10.8",
         "maxLambdaSize": "15mb"
       }
     }
@@ -15,5 +16,7 @@
       "src": "/(.*)",
       "dest": "app.py"
     }
-  ]
+  ],
+  "buildCommand": "pip install -r requirements.txt",
+  "installCommand": "pip install --upgrade pip && pip install -r requirements.txt"
 }
