--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,10 @@
 {
   "version": 2,
+  "buildCommand": "pip install --upgrade pip && pip install -r requirements.txt",
   "builds": [
     {
       "src": "app.py",
-      "use": "@vercel/python@3.1.30",
-      "config": {
-        "runtime": "python3.10",
-        "pythonVersion": "3.10.8",
-        "maxLambdaSize": "15mb"
-      }
+      "use": "@vercel/python"
     }
   ],
   "routes": [
@@ -16,7 +12,5 @@
       "src": "/(.*)",
       "dest": "app.py"
     }
-  ],
-  "buildCommand": "pip install -r requirements.txt",
-  "installCommand": "pip install --upgrade pip && pip install -r requirements.txt"
+  ]
 }
